# clerk-fapi-rs

./: .gitignore  Cargo.toml  README.md  fapi_swagger.json
.github/workflows/: checks.yml
examples/: basic_usage.rs
src/: clerk.rs  clerk_fapi.rs  configuration.rs  endpoints.rs  lib.rs
src/apis/: active_sessions_api.rs  backup_codes_api.rs  client_api.rs  configuration.rs  default_api.rs  dev_browser_api.rs  domains_api.rs  email_addresses_api.rs  environment_api.rs  external_accounts_api.rs  health_api.rs  invitations_api.rs  members_api.rs  membership_requests_api.rs  mod.rs  o_auth2_callbacks_api.rs  o_auth2_identify_provider_api.rs  organization_api.rs  organizations_memberships_api.rs  passkeys_api.rs  phone_numbers_api.rs  roles_api.rs  saml_api.rs  sessions_api.rs  sign_ins_api.rs  sign_ups_api.rs  totp_api.rs  user_api.rs  web3_wallets_api.rs  well_known_api.rs
src/models/: backup_codes.rs  clerk_errors.rs  client_client_wrapped_organization_domains_response.rs  client_client_wrapped_organization_invitations_response.rs  client_client_wrapped_organization_invitations_response_one_of.rs  client_client_wrapped_organization_invitations_user_context_response.rs  client_client_wrapped_organization_membership_requests_response.rs  client_client_wrapped_organization_memberships_response.rs  client_client_wrapped_organization_memberships_response_one_of.rs  client_client_wrapped_organization_suggestions_response.rs  client_client_wrapped_roles_response.rs  client_email_address_verification.rs  client_organization_membership_public_user_data.rs  client_passkey_verification.rs  client_period_account_portal.rs  client_period_active_session.rs  client_period_activity.rs  client_period_auth_config.rs  client_period_client.rs  client_period_client_wrapped_backup_codes.rs  client_period_client_wrapped_deleted_object.rs  client_period_client_wrapped_email_address.rs  client_period_client_wrapped_external_account.rs  client_period_client_wrapped_organization.rs  client_period_client_wrapped_organization_domain.rs  client_period_client_wrapped_organization_domains.rs  client_period_client_wrapped_organization_invitation.rs  client_period_client_wrapped_organization_invitation_user_context.rs  client_period_client_wrapped_organization_invitations.rs  client_period_client_wrapped_organization_invitations_user_context.rs  client_period_client_wrapped_organization_membership.rs  client_period_client_wrapped_organization_membership_request.rs  client_period_client_wrapped_organization_membership_requests.rs  client_period_client_wrapped_organization_memberships.rs  client_period_client_wrapped_organization_suggestion.rs  client_period_client_wrapped_organization_suggestions.rs  client_period_client_wrapped_passkey.rs  client_period_client_wrapped_phone_number.rs  client_period_client_wrapped_roles.rs  client_period_client_wrapped_totp.rs  (+100 more)
