[package]
name = "clerk-fapi-rs"
version = "0.1.0"
authors = ["@Nipsuli"]
homepage = "https://github.com/TheGrowthEngineeringCompany/clerk-fapi-rs/"
repository = "https://github.com/TheGrowthEngineeringCompany/clerk-fapi-rs/"
description = "An unofficial Rust SDK for the Clerk REST Frontend API"
keywords = ["clerk", "auth", "frontend"]
license = "MIT"
edition = "2021"
readme = "README.md"

[features]
rustls-tls = [
    "reqwest/rustls-tls",
    "reqwest-middleware/rustls-tls",
]

[dependencies]
reqwest = { version = "0.12.0", default-features = false, features = ["json", "multipart"] }
reqwest-middleware = { version = "0.4.0", default-features = false, features = ["multipart"] }
anyhow = "1.0.0"
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5.4"
uuid = { version = "^1.8", features = ["serde", "v4"] }
http = "1.0.0"
base64 = "0.22.1"
parking_lot = "0.12"
pin-project-lite = "0.2"
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "sync"] }
chrono = "0.4.38"
async-trait = "0.1"

[dev-dependencies]
clerk-fapi-rs = { path = "." } 
dotenv = "0.15"
tokio = { version = "1.0", features = ["full", "test-util", "rt-multi-thread"] }
mockito = "1.2"
